2002-02-12  Jochen Wiedmann  <joe@ispsoft.de> (2.1011)

        * Makefile.PL: DBI::DBD is no longer loaded by
          default, to allow CPAN's requirements detection
          note and install a missing DBI.

2001-12-28  Jochen Wiedmann  <joe@ispsoft.de> (2.1010)

	* Bumped version number in Mysql/Statement.pm to
	  1.24, so that it is always higher than that 
	  from the Msql-Mysql-modules.
	

2001-12-28  Jochen Wiedmann  <joe@ispsoft.de> (2.1008)

	* lib/DBD/mysql.pod: Fixed minor bug in an example.

2001-12-27  Jochen Wiedmann  <joe@ispsoft.de> (2.1007)

	* Bumped version number in Mysql.pm to 1.24, so that
	  it is always higher than that from the Msql-Mysql-
	  modules.

2001-12-27  Jochen Wiedmann  <joe@ispsoft.de> (2.1006)

	* Within AutoCommit mode, reconnect is now turned
	  off, because the transaction state is unpredictable
	  otherwise.

2001-12-13  Jochen Wiedmann  <joe@ispsoft.de> (2.1005)

	* dbdimp.c: Added use of SvMAGICAL to dbd_db_quote.
	  Rudy Lippan <almighty@randomc.com>

2001-11-13  Jochen Wiedmann  <joe@ispsoft.de> (2.1004)

	* Makefile.PL: Fixed handling of --testdb, --testuser, ...

2001-11-05  Jochen Wiedmann  <joe@ispsoft.de> (2.1003)

	* bind_param now using mysql_real_escape_string
	  as well. Dave Rolsky <autarch@urth.org>

2001-11-04  Jochen Wiedmann  <joe@ispsoft.de> (2.1002)

	* Added mysql_ssl flag to DBI->connect.

2001-11-04  Jochen Wiedmann  <joe@ispsoft.de> (2.1001)

	* Quoting now based on mysql_real_escape_string. Thanks
	  to Dave Rolsky <autarch@urth.org> for suggesting this.

2001-11-02  Jochen Wiedmann  <joe@ispsoft.de> (2.1000)

	* Portability changes for MySQL 4.

2001-05-25  Jochen Wiedmann  <joe@ispsoft.de> (2.0901)

	* dbdimp.c: Fixed $dbh->{mysql_insertid}; added t/insertid.t

2001-04-01  Jochen Wiedmann  <joe@ispsoft.de> (2.0900)

	* Added transaction support for MySQL.
	  (Bob Lyons <lyons@nextrials.com>)
	* dbd/dbdimp.c: Fixed MAXLENGTH warning; used to hint for